# AloneChatWorkspace

./: .gitattributes  .gitignore  .mcp.json  Agent框架技术开发报告.docx  CODE_WIKI.md  ChatAgent.code-workspace  Code模式深度技术开发报告.md  LICENSE  Makefile  README.md  README_CN.md  RELEASE_NOTE_v0.1.0.md  RELEASE_NOTE_v0.1.1.md  SECURITY_AUDIT_REPORT.md  Trae_Solo双模式架构技术汇报.pptx  generate_docs.py
agent-framework/: .env.example  GATEWAY_README.md  config.yaml  gateway_main.py  pyproject.toml  requirements-ocr.txt  test_gateway.py  test_websocket_client.py
agent-framework/agent_framework/: __init__.py  config.py  entry.py
agent-framework/agent_framework/agent/: __init__.py  code_agent.py  code_prompts.py  intent_clarifier.py  leader_agent.py  mode_manager.py  mode_router.py  mtc_agent.py  mtc_prompts.py  multi_agent.py  react_agent.py  task_planner.py  worker_agent.py
agent-framework/agent_framework/channels/: __init__.py  base.py  chat_app.py
agent-framework/agent_framework/cli_enhancements/: __init__.py  additional_dir_loader.py  claude_md_loader.py  manager.py  rules_loader.py  skills_discovery.py  worktree_manager.py
agent-framework/agent_framework/code/: __init__.py  apply_patch.py  code_engine.py  codex_bridge.py  shell_tool.py
agent-framework/agent_framework/commands/: __init__.py
agent-framework/agent_framework/configs/: __init__.py  cli_enhancements.yaml  cost.yaml  intent_clarification.yaml  lsp.yaml  mode_config.yaml  models.yaml  permissions.yaml  prompts.yaml  sandbox.yaml  skills.yaml  storage.yaml  team_engine.yaml  tools.yaml
agent-framework/agent_framework/configs/locales/: en.json  ja.json  pt-BR.json  zh-Hans.json
agent-framework/agent_framework/core/: __init__.py  agent_bus.py  app_state.py  base_agent.py  base_llm.py  base_memory.py  base_tool.py  cache.py  command.py  context_isolation.py  dual_mode_manager.py  error_handling.py  mode_manager.py  orchestrator.py  query_engine.py  role_router.py  store.py  task.py  types.py
agent-framework/agent_framework/cost/: __init__.py  storage.py  tracker.py  types.py
agent-framework/agent_framework/credentials/: __init__.py  credential_store.py  oauth_token_store.py
agent-framework/agent_framework/deepseek_optimization/: __init__.py  optimizer.py
agent-framework/agent_framework/deepseek_optimization/cache/: __init__.py  cache_engine.py  deepseek_cache.py  semantic_cache.py  vector_cache.py
agent-framework/agent_framework/deepseek_optimization/context/: __init__.py  compression_strategy.py  context_cache.py  context_compressor.py  context_config.py  context_monitor.py  context_snapshot.py  mega_context_manager.py  message_ranker.py  semantic_retriever.py  session_manager.py  storage_engine.py  token_estimator.py  window_manager.py
agent-framework/agent_framework/deepseek_optimization/llm/: __init__.py  deepseek_provider.py  model_config.py  temperature_controller.py
agent-framework/agent_framework/deepseek_optimization/mcp_marketplace/: __init__.py  adapter.py  client.py  config.py  loader.py  manager.py  registry.py  types.py
agent-framework/agent_framework/deepseek_optimization/security/: audit_logger.py  data_protection.py  encryption.py  license_manager.py
agent-framework/agent_framework/deepseek_optimization/swe/: swe_engine.py
agent-framework/agent_framework/enterprise/: __init__.py  enterprise_manager.py  managed_settings.py
agent-framework/agent_framework/gateway/: __init__.py  agent.py  api.py  auth.py  core.py  mcp_api.py  router.py  session.py  tools.py  types.py  user_api.py  websocket.py
agent-framework/agent_framework/llm/: __init__.py  litellm_provider.py
agent-framework/agent_framework/locale/: __init__.py
agent-framework/agent_framework/lsp/: __init__.py  client.py  manager.py
agent-framework/agent_framework/lsp/servers/: __init__.py
agent-framework/agent_framework/memory/: __init__.py  conversation_memory.py  vector_memory.py
agent-framework/agent_framework/observability/: logger.py  metrics.py  tracer.py
agent-framework/agent_framework/orchestration/: __init__.py  dag.py  parallel.py  sequential.py
agent-framework/agent_framework/permissions/: __init__.py  permission_manager.py  permission_rule.py
agent-framework/agent_framework/queue/: __init__.py  task_queue.py
agent-framework/agent_framework/rag/: __init__.py  code_indexer.py  embedding.py  loader.py  local_embedding.py  pipeline.py  retriever.py  splitter.py
agent-framework/agent_framework/rlm/: dispatcher.py
agent-framework/agent_framework/sandbox/: __init__.py  enhanced_sandbox.py  subprocess_sandbox.py
agent-framework/agent_framework/security/: __init__.py  input_validation.py  path_validator.py  rate_limiter.py
agent-framework/agent_framework/services/: __init__.py  api_client.py
agent-framework/agent_framework/storage/: __init__.py  database_manager.py  migration.py  sqlite_storage.py
agent-framework/agent_framework/tools/: __init__.py  glob_tool.py  registry.py  skills_cli.py  skills_hot_reload.py  skills_marketplace.py  skills_registry.py  skills_sh_client.py
agent-framework/agent_framework/tools/builtin/: shell.py  (+4 more)
agent-framework/examples/: channel_example.py  code_mode_example.py  config_example.py  deepseek_complete_example.py  deepseek_comprehensive.py  mode_switching_example.py  mtc_mode_example.py  orchestration_example.py
agent-framework/tests/: test_agent.py  test_code_mode.py  test_context_management.py  test_core.py  test_llm.py  test_mcp_integration.py  test_memory.py  test_mode_manager.py  test_mtc_mode.py  test_multi_agent.py  test_orchestration.py  test_rag.py  test_sandbox.py  test_security.py  test_tools.py
alonework-cli/: .env.example  DEEPSEEK_V4_FLASH.md  INTEGRATION.md  INTEGRATION_COMPLETE.md  QUICKSTART.md  README.md  fix_encoding.py  pyproject.toml  test_ui.py
alonework-cli/examples/: INTEGRATION_TEST.md  README.md  basic_usage.py  integration_test.py  local_model.py  multi_turn_chat.py
alonework-cli/src/alonechat/: __init__.py  cli.py  framework_config.py
alonework-cli/src/alonework/: __init__.py  cli.py
alonework-cli/tests/: __init__.py  conftest.py
(+659 files in other folders)
