[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-framework"
version = "0.3.0"
description = "ChatAgent - Production-Grade Agent Gateway (like OpenClaw) for LLM-powered applications"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "chromadb>=0.4.22",
    "openai>=1.6.0",
    "tiktoken>=0.5.0",
    "pyyaml>=6.0",
    "aiofiles>=23.2.0",
    "python-dotenv>=1.0.0",
    "unstructured>=0.12.0",
    "pdfminer.six>=20221105",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.12.0",
    "tenacity>=8.2.0",
    "networkx>=3.2.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_framework*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
