[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-framework"
version = "0.3.0"
description = "ChatAgent - Production-Grade Agent Gateway (like OpenClaw) for LLM-powered applications"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "chromadb>=0.4.22",
    "openai>=1.6.0",
    "tiktoken>=0.5.0",
    "pyyaml>=6.0",
    "aiofiles>=23.2.0",
    "python-dotenv>=1.0.0",
    "unstructured>=0.12.0",
    "pdfminer.six>=20221105",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.12.0",
    "tenacity>=8.2.0",
    "networkx>=3.2.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "PyJWT>=2.8.0",
    "email-validator>=2.1.0",
    # 文档处理
    "pdfplumber>=0.9.0",
    "python-docx>=0.8.11",
    "openpyxl>=3.1.2",
    "python-pptx>=0.6.21",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
    # 图片处理
    "Pillow>=10.0.0",
    # HTTP 客户端
    "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_framework*"]

[project.scripts]
skills = "agent_framework.tools.skills_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
