[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alonework-cli"
version = "0.3.0"
description = "国产化、终端原生、深度中文优化的AI编程Agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AloneWork Team", email = "aloneworkworkspace@163.com"}
]
keywords = ["ai", "agent", "coding", "cli", "chinese", "deepseek"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",
    "PyYAML>=6.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "aiosqlite>=0.20.0",
    "prompt_toolkit>=3.0.40",
    "litellm>=1.40.0",
    "pydantic-settings>=2.1.0",
    "chromadb>=0.4.22",
    "openai>=1.6.0",
    "tiktoken>=0.5.0",
    "aiofiles>=23.2.0",
    "unstructured>=0.12.0",
    "pdfminer.six>=20221105",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.12.0",
    "tenacity>=8.2.0",
    "networkx>=3.2.0",
    "PyJWT>=2.8.0",
    "email-validator>=2.1.0",
    "pdfplumber>=0.9.0",
    "python-docx>=0.8.11",
    "openpyxl>=3.1.2",
    "python-pptx>=0.6.21",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
local-models = [
    "ollama>=0.1.0",
]
rag = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0.0",
]
chinese-nlp = [
    "jieba>=0.42.0",
]
gateway = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
]
codex = [
    "codex-sdk-python>=0.1.0",
]

[project.scripts]
alonework = "alonechat.cli:main"

[project.urls]
Homepage = "https://github.com/Ryan-178/AloneChatWorkspace"
Documentation = "https://github.com/Ryan-178/AloneChatWorkspace#readme"
Repository = "https://github.com/Ryan-178/AloneChatWorkspace"
Issues = "https://github.com/Ryan-178/AloneChatWorkspace/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
